[package]
name = "resip"
version = "0.1.0"
edition = "2024"
description = "Cross-platform CLI for local Clash over SSH tunnel to remote Mihomo/Clash."

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
